--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,7 +1,6 @@
 @import "./reset.css";
 
 :root {
-   /*Global variable*/
    --app-dark-bg: #282828;
    --app-blue-bg: #3a43f0;
    --app-lessdark-bg: #3f3f3f;
@@ -14,8 +13,6 @@
 
 body {
    background-color: var(--app-dark-bg);
-   border: 1px solid #000;
-   padding: 10px;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
@@ -23,8 +20,9 @@ body {
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 .container {
    width: min(100% - 30px, 1080px);
-   height: 100dvh;
+   height: 100vh;
    margin-inline: auto;
+   position: relative;
 }
 
 .flex {
@@ -33,68 +31,83 @@ body {
    flex-direction: column;
    align-items: center;
    text-align: center;
-}
-
-.flex2 {
-   display: flex;
-   justify-content: left;
-   flex-direction: row;
-   align-items: center;
-   text-align: left;
+   gap: 15px;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 /*                     Main                              */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-.container-content {
-   width: 60%;
-   height: 100px;
-   margin-bottom: 10px;
-}
-
-.box {
+.container-form {
+   position: relative;
+   top: 5%;
+   left: 0%;
    width: 100%;
-   height: 450px;
-   min-height: 400px;
-   display: flex;
-   flex-direction: row-reverse;
-   flex-wrap: wrap;
-   background: transparent;
-   line-height: 32;
+   height: 200px;
 }
 
-.div-contact {
-   line-height: 30px;
-   width: max-content;
-   height: 100px;
-   background-color: var(--app-lessdark-bg);
-   border: 1px solid var(--app-lessdark-bg);
-   margin: 5px;
-   padding: 10px;
-   cursor: pointer;
-}
-
-.div-contact:hover {
-   border-color: var(--app-primarybotton-color);
-}
-
-.div-contact p {
-   color: var(--app-morelessdark-bg);
-}
-
-.contacts-saved {
-   margin-top: 20px;
-   width: 100%;
-   height: 40px;
-   line-height: 20px;
+h2 {
+   font-size: 35px;
+   color: var(--app-ligh-text);
    justify-content: center;
-   flex-direction: row;
+   display: inline;
    align-items: center;
    text-align: center;
 }
 
-.contacts-saved p {
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+/*         Container List and Div contacts               */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.container-div-list {
+   position: absolute;
+   top: 30%;
+   max-height: 550px;
+   left: 0%;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   overflow: none;
+}
+
+.div-contact {
+   max-width: 95px;
+   min-width: max-content;
+   padding: 10px 10px;
+   height: 100px;
+   margin: 5px;
+   border: 1px solid var(--app-primarybotton-color);
+   box-sizing: border-box;
+   display: flex;
+   align-items: center;
+   justify-content: left;
+   flex-direction: column;
+   animation: 0.3s trans linear;
+   cursor: pointer;
+}
+
+.div-contact p {
+   flex-direction: column;
+   display: inline;
+   color: var(--app-morelessdark-bg);
+}
+
+.clicked {
+   border: 1px solid var(--app-errormessage-color);
+}
+
+.container-counter {
+   position: absolute;
+   top: 90%;
+   left: 0%;
+   margin-top: 20px;
+   width: 100%;
+   height: 40px;
+   line-height: 20px;
+}
+
+.container-counter p {
    color: var(--app-primarybotton-color);
 }
 
@@ -114,28 +127,11 @@ body {
    animation: anim 0.3s ease-in;
 }
 
-.flex3 {
-   display: flex;
-   flex-direction: flex-end;
-   flex-wrap: wrap-reverse;
-}
-
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 /*                   Form                                */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-
-h2 {
-   margin-bottom: 20px;
-   font-size: 35px;
-   color: var(--app-ligh-text);
-   justify-content: center;
-   display: inline;
-   align-items: center;
-   text-align: center;
-}
-
 .form-contact {
-   width: 100%;
+   width: 80%;
 }
 
 .input-container {
@@ -144,7 +140,7 @@ h2 {
 }
 
 input[type="text"] {
-   width: 75%;
+   width: 50%;
    height: 40px;
    margin-right: 10px;
    justify-content: left;
@@ -155,20 +151,6 @@ input[type="text"] {
    color: var(--app-dark-blue-bg);
    border-radius: 5px;
    background-color: transparent;
-}
-
-.error-message {
-   width: 100%;
-   color: var(--app-errormessage-color);
-   display: none;
-   margin: 20px 10px 20px 0px;
-   height: 40px;
-   padding: 10px 10px;
-   font-size: 12px;
-   margin-top: 0px;
-   padding-top: 0px;
-   top: 90%;
-   position: absolute;
 }
 
 #contact-info {
@@ -203,4 +185,22 @@ input[type="button"] {
 
 input[type="button"]:hover {
    background-color: var(--app-primarybotton-hover-color);
+}
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+/*                  Error message                        */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+.error-message {
+   width: 80%;
+   color: var(--app-errormessage-color);
+   display: none;
+   margin: 20px 10px 20px 130px;
+   height: 40px;
+   padding: 10px 10px;
+   font-size: 12px;
+   margin-top: 0px;
+   padding-top: 0px;
+   text-align: left;
+   top: 90%;
+   position: absolute;
 }
