--- a/assets/style/reset.css
+++ b/assets/style/reset.css
@@ -10,13 +10,13 @@
 
 html,
 body {
-    height: 100%;
+    /* To hidde the scroll bar*/
+    overflow: hidden; 
 }
 
 body {
     background-color: #282828;
     font-family: 'Poppins', sans-serif;
-
     font-weight: 400;
     line-height: 1.5;
     /*outline: 2px dashed rgb(205, 33, 148);*/
